folder arrangement done

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
     <title>Mimic - Playful Nonsense Generator</title>
 </head>
 <body>
@@ -33,6 +33,6 @@
         <button type="submit">Mimic It!</button>
     </form>
     <div class="mimic-output" id="output" style="display:none;"></div>
-    <script src="mic.js"></script>
+    <script src="js/mic.js"></script>
 </body>
 </html>
